# math_evaluator

./: .gitignore  CMakeLists.txt  README.md
include/: errors.h  lex.h  parser.h
src/: lex.c  main.c  parser.c
